--- a/assgn8/outsideAssets/ATMredesign.html
+++ b/assgn8/outsideAssets/ATMredesign.html
@@ -84,7 +84,7 @@
 ​
 				The two things that people want when they use ATMs are safety and convenience. To address to these needs, my final redesign consists of an overall smaller control so users can use their bodies to conceal the actions they take on the ATM, a finger scanner as an alternative form of identification verification, rezoning of the current controls by actions users will take, and reshaping of existing buttons to clearly communicate and differentiate their functions.
 
-				I have always been interested in design, calligraphy, and understanding how others think, but I fully discovered my passion for HCI in 2017 after taking courses in psychology, computer coding, and human robot interaction, and joining an HCI research team dedicated to mitigating the negative impacts of racism and microaggressions. <br><br></p>
+				<br><br></p>
 
 			</div>
 			<div class="col-sm-1"></div>
@@ -141,7 +141,7 @@
 ​
 					<b>USER NEEDS</b><br>
 ​
-					All of the research revealed two key ATM user needs:​ safety and convenience.<br><br><br><br></p>
+					All of the research revealed two key ATM user needs:​ <b>safety</b> and <b>convenience.</b><br><br><br><br></p>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -252,7 +252,7 @@
 		<div class="row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-11" style="text-align: left;">
-				<h2>FINAL ITERATION</h2><br>
+				<h2>FINAL ITERATION AND PITCH</h2><br>
 			</div>
 		</div>
 		<div class = "row">
@@ -311,8 +311,8 @@
 		      <p> Emergency Response </p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%;" alt="Image">
-		      <p>Some text..</p></a>
+		      <a href="lookingglass.html" style="color: black;"><img src="../assets/images/index/lookingglasscover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <h4><b>The Looking Glass</h4></b></a>
 		    </div>
 		   </div>
 		</div><br>
