--- a/assgn8/outsideAssets/ath.html
+++ b/assgn8/outsideAssets/ath.html
@@ -91,14 +91,14 @@
 ​
 				We achieved our goal through our visual design of the display and through incorporating other tools, such as motion and an interactive kiosk control that enabled us to <i>put some control back</i> into the travelers' hands. <br></p>
 
-				<video width="580" height="400" controls>
+				<video style="width:100%;" controls>
 					<source src = "../assets/images/atlantis/finaltablet.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 
 			</div>
 			<div class="col-sm-4" style="text-align: right;">
-				<video width="360" height="638" controls>
+				<video style="width: 90%;" controls>
 				  <source src="../assets/images/atlantis/final.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
@@ -124,12 +124,12 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-3"></div>
-			<div class="col-sm-3" style="align-content: center; text-align: center; margin-right: 10px;">
-				<a href="../assets/images/atlantis/currentstate.png"><img src="../assets/images/atlantis/currentstate.png"></a><br>
-				<h4> CURRENT STATE</h4>
+			<div class="col-sm-3" style="align-content: center; text-align: center;">
+				<a href="../assets/images/atlantis/currentstate.png"><img src="../assets/images/atlantis/currentstate.png" style=" width:100%;"></a><br>
+				<h4> CURRENT STATE</h4><br><br><br>
 			</div>
-			<div class="col-sm-3" style="align-content: center; text-align: center; margin-left: 10px;">
-				<a href="../assets/images/atlantis/futurestate.png"><img src="../assets/images/atlantis/futurestate.png"></a><br>
+			<div class="col-sm-3" style="align-content: center; text-align: center;">
+				<a href="../assets/images/atlantis/futurestate.png"><img src="../assets/images/atlantis/futurestate.png" style=" width:90%;"></a><br>
 				<h4> FUTURE STATE</h4><br><br>
 			</div>
 			<div class="col-sm-3"></div>
@@ -410,8 +410,8 @@
 		      <p> Emergency Response </p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%;" alt="Image">
-		      <p>Some text..</p></a>
+		      <a href="lookingglass.html" style="color: black;"><img src="../assets/images/index/lookingglasscover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <h4><b>The Looking Glass</h4></b></a>
 		    </div>
 		   </div>
 		</div><br>
