--- a/assgn8/outsideAssets/responsiveweb.html
+++ b/assgn8/outsideAssets/responsiveweb.html
@@ -847,8 +847,8 @@
 		      <p> Emergency Response </p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%;" alt="Image">
-		      <p>Some text..</p></a>
+		      <a href="lookingglass.html" style="color: black;"><img src="../assets/images/index/lookingglasscover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <h4><b>The Looking Glass</h4></b></a>
 		    </div>
 		   </div>
 		</div><br>
