--- a/assgn8/outsideAssets/lookingglass.html
+++ b/assgn8/outsideAssets/lookingglass.html
@@ -126,7 +126,7 @@
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10">
 				<h1 style="font-size: 50px; padding-top: 30px;">DESIGN PROCESS</h1><br>
-				<h2>BACKGROUND ESEARCH</h2><br><br>
+				<h2>BACKGROUND RESEARCH</h2><br><br>
 				<p style="font-size: 16px; background-color: white; display: inline-block; line-height: 28px;"> 
 
 					<b>BEFORE THE TEAM</b><br><br>
