--- a/assgn8/outsideAssets/lookingglass.html
+++ b/assgn8/outsideAssets/lookingglass.html
@@ -411,7 +411,10 @@
 			</div>
 
 			<div class="col-sm-5" style="align-content: left; text-align: left; margin-left: 10px;">
-				
+				<video width="350" height="595" controls>
+				  <source src="../assets/images/lookingglass/finalpitch.mp4" class="img-responsive" type="video/mp4">
+				Your browser does not support the video tag.
+				</video><br><b><br><br><br>
 					
 			</div>
 			<div class="col-sm-1"></div>
