--- a/assgn8/index.html
+++ b/assgn8/index.html
@@ -79,7 +79,7 @@
 
 				<b>THE REAL ME</b><br>
 
-				Outside of class, I enjoy spending my time singing with my <a href="https://drive.google.com/open?id=10dxi2DF2rqjaOYIxlbwDLZdrb0acZ5o2" style="color: black;"><u>acapella group,</u></a> doing calligraphy, working out, and researching new exotic foods to try!</p>
+				Outside of class, I enjoy spending my time singing with my <a href="https://www.youtube.com/watch?v=ULIdA6tuly0" style="color: black;"><u>acapella group,</u></a> doing calligraphy, working out, and researching new exotic foods to try!</p>
 			</div>
 			<div class="col-sm-2"></div>
 		</div>
